--- a/data/apple-watch.json
+++ b/data/apple-watch.json
@@ -6,7 +6,7 @@
     "resolution_pixels": [410, 502],
     "resolution_points": [205, 251],
     "ppi": 338,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Ultra",
@@ -15,7 +15,7 @@
     "resolution_pixels": [410, 502],
     "resolution_points": [205, 251],
     "ppi": 338,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Series 10",
@@ -24,7 +24,7 @@
     "resolution_pixels": [416, 496],
     "resolution_points": [208, 248],
     "ppi": 330,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Series 10",
@@ -33,7 +33,7 @@
     "resolution_pixels": [374, 446],
     "resolution_points": [187, 223],
     "ppi": 330,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Series 9",
@@ -42,7 +42,7 @@
     "resolution_pixels": [396, 484],
     "resolution_points": [198, 242],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Series 9",
@@ -51,7 +51,7 @@
     "resolution_pixels": [352, 430],
     "resolution_points": [176, 215],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Series 8",
@@ -60,7 +60,7 @@
     "resolution_pixels": [396, 484],
     "resolution_points": [198, 242],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Series 8",
@@ -69,7 +69,7 @@
     "resolution_pixels": [352, 430],
     "resolution_points": [176, 215],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Series 7",
@@ -78,7 +78,7 @@
     "resolution_pixels": [396, 484],
     "resolution_points": [198, 242],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Series 7",
@@ -87,7 +87,7 @@
     "resolution_pixels": [352, 430],
     "resolution_points": [176, 215],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Series 6",
@@ -96,7 +96,7 @@
     "resolution_pixels": [368, 448],
     "resolution_points": [184, 224],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Series 6",
@@ -105,7 +105,7 @@
     "resolution_pixels": [324, 394],
     "resolution_points": [162, 197],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Series 5",
@@ -114,7 +114,7 @@
     "resolution_pixels": [368, 448],
     "resolution_points": [184, 224],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Series 5",
@@ -123,7 +123,7 @@
     "resolution_pixels": [324, 394],
     "resolution_points": [162, 197],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Series 4",
@@ -132,7 +132,7 @@
     "resolution_pixels": [368, 448],
     "resolution_points": [184, 224],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "Series 4",
@@ -141,7 +141,7 @@
     "resolution_pixels": [324, 394],
     "resolution_points": [162, 197],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "SE (2nd gen.)",
@@ -150,7 +150,7 @@
     "resolution_pixels": [368, 448],
     "resolution_points": [184, 224],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "SE (2nd gen.)",
@@ -159,7 +159,7 @@
     "resolution_pixels": [324, 394],
     "resolution_points": [162, 197],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "SE (1st gen.)",
@@ -168,7 +168,7 @@
     "resolution_pixels": [368, 448],
     "resolution_points": [184, 224],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   },
   {
     "model": "SE (1st gen.)",
@@ -177,6 +177,6 @@
     "resolution_pixels": [324, 394],
     "resolution_points": [162, 197],
     "ppi": 326,
-    "refresh_rate": 60
+    "max_refresh_rate": 60
   }
 ]
